[gd_scene load_steps=9 format=4 uid="uid://cd86g4vam4445"]

[ext_resource type="Script" path="res://Scripts/Player/player.gd" id="1_xw2u1"]
[ext_resource type="Material" uid="uid://b0frlwu68o6rk" path="res://Materials/Material_Player.tres" id="2_fjtm8"]
[ext_resource type="PackedScene" uid="uid://bkgef3plv8nai" path="res://Scenes/Player/projectile.tscn" id="2_uspnu"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_jouk3"]
radius = 0.606471

[sub_resource type="ArrayMesh" id="ArrayMesh_neyn1"]
resource_name = "Player_Sphere"
_surfaces = [{
"aabb": AABB(-0.700926, 0.00300109, -0.623764, 1.40185, 1.26212, 1.23648),
"attribute_data": PackedByteArray("wQGTPVrYGj9XpYU9SP0QP9tAiD0fUQc/mmabPUab9j76OSI5zHxRPqAvyT7c9X8/HEnLPfR4Gj/USds9KJYSP6SZ8z2Ekwo/VaQLPvNDAT/tA+8+Af1fP9949z3Y6Rw/HTUOPtQNFz/MVyM+spcRP6gYQj5Edgk/MVsAP2KDPT9yUQo+Ak8hP9VRJD4IBx4/vMY/Psv6Gj8AYWQ+Io4WP/Vq/j70axo/BRrBPaZ6Jj/odQ8+iN4mP87ELT6zwiY/cvpMPqAwJj+1enI+xz0lP/NF6T6sbfI+7zsJPhvOLD8ZnSc+5xUwPxaKRz7fWjI/3RVyPsjhND8XOcE+qvW2PlqC7T1y/jE/zwYQPhgmOT/ERC8+XB0/P0cmXD5EGEU/6SqIPqrWiT7uzyE9IhEgP7SHpz2cyjQ/CsPzO4T3Ez/SeLw9h8xCPzc0IjmIegY/mewEPv5YTT91oCo8mprzPq9CNT4cl1M/fmIMPvC0Xz55bwA/QD7rPnlvAD/TvXM/sU0fP/7b0j6xTR8/ANzSPnpvAD+OH5U+v6kpP931fz96bwA/0EL3PVHlTD9rvHM/sk0fPwAwIjl4oWY/cw5XP18cbz9RIDM/H/VKPwAwIjlW02k/2EL3Pf4PZz8D+RA/VtNpP44flT6oV08/ECDtPh71Sj8A3NI+uJQqP5AE0z6LIhs/y+tQP3JeGz/6Whk/DnkmP/FCUj8ooDE/NqZMP8NcOj+s6UI/Ez8+P1Z2NT9c0zs/bDUnP209Mj+EAx0/XaEmP9wkGD/hVh0/qPNFP6ebHT+AKSQ/QOEiP1/xQz/wRSc/AsA/P02yKT+IkDo/LVkqP0IjNT/E3yk/F68vPy+JJz9yZyo/DiAjP48vJj+K6hM/AvM0P2ghNT9E8FI+EOu6PjC/dT4c6uI+ML91PhDruj5QlqI9HOriPlCWoj1ecsQ+iuGHPsZi2T6K4Yc+XnLEPhAdXT3GYtk+EB1dPRDruj5QlqI9EOu6PjC/dT4c6uI+ML91Phzq4j5QlqI9XnLEPorhhz7GYtk+iuGHPsZi2T4QHV09XnLEPhAdXT0Q67o+ML91Phzq4j4wv3U+EOu6PlCWoj0c6uI+UJaiPV5yxD6K4Yc+xmLZPorhhz5ecsQ+EB1dPcZi2T4QHV09EOu6PlCWoj0Q67o+ML91Phzq4j4wv3U+HOriPlCWoj1ecsQ+iuGHPsZi2T6K4Yc+xmLZPhAdXT1ecsQ+EB1dPaAvyT7c9X8/7QPvPgH9Xz8xWwA/YoM9P/Vq/j70axo/BRrBPaZ6Jj8FGsE9pnomPwUawT2meiY/BRrBPaZ6Jj8FGsE9pnomP/NF6T6sbfI+FznBPqr1tj7pKog+qtaJPjc0IjmIegY/NzQiOYh6Bj+Z7AQ+/lhNP35iDD7wtF8+XxxvP1EgMz9fHG8/USAzP+FWHT+o80U/4VYdP6jzRT+nmx0/gCkkP4rqEz8C8zQ/+jkiOcx8UT6kmfM9hJMKP6SZ8z2Ekwo/7QPvPgH9Xz8xWwA/YoM9P7zGPz7L+ho/vMY/Psv6Gj/1av4+9GsaPwUawT2meiY/BRrBPaZ6Jj8FGsE9pnomPwUawT2meiY/FopHPt9aMj8Wikc+31oyPxc5wT6q9bY+NzQiOYh6Bj+Z7AQ+/lhNP35iDD7wtF8+Ez8+P1Z2NT8TPz4/VnY1P+FWHT+o80U/p5sdP4ApJD8viSc/cmcqPy+JJz9yZyo/iuoTPwLzND+K6hM/AvM0P4rqEz8C8zQ/20CIPR9RBz+gL8k+3PV/P6SZ8z2Ekwo/pJnzPYSTCj/tA+8+Af1fP8xXIz6ylxE/zFcjPrKXET8xWwA/YoM9P7zGPz7L+ho/9Wr+PvRrGj8FGsE9pnomPwUawT2meiY/BRrBPaZ6Jj8FGsE9pnomP3L6TD6gMCY/80XpPqxt8j4Wikc+31oyPxc5wT6q9bY+xEQvPlwdPz/pKog+qtaJPjc0IjmIegY/mewEPv5YTT9+Ygw+8LRfPosiGz/L61A/KKAxPzamTD9c0zs/bDUnP12hJj/cJBg/4VYdP6jzRT+nmx0/gCkkP6ebHT+AKSQ/QOEiP1/xQz9A4SI/X/FDP02yKT+IkDo/TbIpP4iQOj9Nsik/iJA6Py+JJz9yZyo/L4knP3JnKj+K6hM/AvM0P4rqEz8C8zQ/iuoTPwLzND+K6hM/AvM0Pxzq4j4wv3U+EOu6PlCWoj0Q67o+ML91Phzq4j5QlqI9EOu6PjC/dT4Q67o+ML91PhDruj4wv3U+HOriPjC/dT4c6uI+ML91Phzq4j4wv3U+EOu6PlCWoj0Q67o+UJaiPRDruj5QlqI9HOriPlCWoj0c6uI+UJaiPRzq4j5QlqI9EOu6PlCWoj0Q67o+UJaiPRDruj5QlqI9EOu6PlCWoj0Q67o+ML91PhDruj4wv3U+EOu6PjC/dT4Q67o+ML91Phzq4j4wv3U+HOriPjC/dT4c6uI+ML91Phzq4j5QlqI9HOriPlCWoj0c6uI+UJaiPRzq4j5QlqI9"),
"bone_aabbs": [AABB(-0.700926, 0.00300109, -0.623764, 1.40185, 1.26212, 1.23648)],
"format": 34359745559,
"index_count": 528,
"index_data": PackedByteArray("GQAPAB4AGQAUAA8AKQABACcAKQACAAEAJQAAABUAKwACACkAKwADAAIAJwAAACUAJwABAAAAAwAIAAIAAwAJAAgAAQAGAAAAAQAHAAYAEwAUABkAEwAaABQAAgAHAAEAAgAIAAcAAAAGABUACQANAAgACQAOAA0ABwALAAYABwAMAAsADgAaABMADgAfABoACAAMAAcACAANAAwABgALABUADgASAA0ADgATABIADAAQAAsADAARABAAKwAtAAMAKwAEAC0ADQARAAwADQASABEACwAQABUAEwAYABIAEwAZABgAEQAWABAAEQAXABYACQAfAA4ACQAkAB8AEgAXABEAEgAYABcAEAAWABUAFwAbABYAFwAcABsAAwAkAAkAAwAtACQAGAAcABcAGAAdABwAFgAbABUAGQAdABgAGQAeAB0AIwAFACwAIwAKAAUAHQAhABwAHQAiACEAGwAgABUAHgAiAB0AHgAjACIAHAAgABsAHAAhACAAHgAKACMAHgAPAAoAIgAoACEAIgAqACgAIAAmABUAIwAqACIAIwAsACoAIQAmACAAIQAoACYALwBCADMALwBAAEIAPwBBAC4APwBIAEEAOwBHAD0AOwBGAEcANwBFADgANwBEAEUAMwBDADUAMwBCAEMAPQBIAD8APQBHAEgAOABGADsAOABFAEYANQBEADcANQBDAEQARABOAEUARABNAE4AQgBMAEMAQgBLAEwARwBRAEgARwBQAFEARQBPAEYARQBOAE8AQwBNAEQAQwBMAE0AQABLAEIAQABJAEsASABKAEEASABRAEoARgBQAEcARgBPAFAAUQBSAEoATwBSAFAATQBSAE4ASwBSAEwAUABSAFEATgBSAE8ATABSAE0ASQBSAEsAPgBTADwAOgBTADkANgBTADQAMgBTADAAMQBTAD4APABTADoAOQBTADYANABTADIAVABXAFYAVABVAFcAVgBbAFoAVgBXAFsAVQBYAFkAVQBUAFgAXQBfAF4AXQBcAF8AXABiAF8AXABjAGIAXgBgAF0AXgBhAGAAWQBeAFUAWQBhAF4AWgBcAFYAWgBjAFwAWABhAFkAWABgAGEAVQBfAFcAVQBeAF8AVgBdAFQAVgBcAF0AVABgAFgAVABdAGAAVwBiAFsAVwBfAGIAWwBjAFoAWwBiAGMAZABnAGUAZABmAGcAZgBrAGcAZgBqAGsAZQBoAGQAZQBpAGgAbQBvAGwAbQBuAG8AbAByAHMAbABvAHIAbgBwAHEAbgBtAHAAaQBuAHEAaQBlAG4AagBsAHMAagBmAGwAaABxAHAAaABpAHEAZQBvAG4AZQBnAG8AZgBtAGwAZgBkAG0AZABwAG0AZABoAHAAZwByAG8AZwBrAHIAawBzAHIAawBqAHMA"),
"lods": [0.137987, PackedByteArray("swCsALUAtQCsAKkAswCuAKwAswC1ALEAswCxAK0ArQCuALMArQC0AK4AqwC0AK0AtQCpALcAtwCpAKYAtQC3ALIAtwCmALoAtwC6ALIAqgCtALAAqgC2ALQAqACqALAAqAC2AKoAqAC4ALYApQC4AKcApQCnAK8ApQC7ALgApQCvALkAuQC7AKUAuQAEALsALwC9ADMAMwC9ADUALwC8AL0AvADDAL0AvQDDAMYAwwDMAMYANQBDAE0ANQBNADcAvADAAMQAwADNAMQANwDFAEUARQDFAMkANwBFADgAxwDLAMkARQDJAL4AOABFAL4AOAC+ADsAOwC+AD0APQC+AL8APQC/AD8AvgDBAL8AvgDIAMEAyADKAMEAPwC/AEEAvwDCAEEAPwBBAC4AOgA8ADkAOQA8ADYANgA8ADQANAA8ADIAMgA8ADAAMAA8AD4AVQBfAFYAVgBdAFUAzgDQANEAzwDRANAAZABnAGUAZABmAGcA4gDpAN4A4gBuAG8A0gDmAOMA0wDVAOcA1gDqAOgA1wDbAOsA2ADkAN8A2QDUAOUA3ADgAOwA3QDaAOEA"), 0.226381, PackedByteArray("eAB3AHYAeQB9AHcAegAfAH0AfAB2AHUAfAB1AIIAggB1AHQAgAAEAIMAgACDAH8AgQB/AH4AgQB+AHsALwCGADUANQCGAIQAhABSAD0APQBSAEoAPQCIAC4AhQCHAIkAOQA8ADQANAA8ADAA")],
"material": ExtResource("2_fjtm8"),
"name": "Material",
"primitive": 3,
"skin_data": PackedByteArray("AAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAAAAAAAAAAAAD//wAAAAAAAAAAAAAAAAAA//8AAAAAAAAAAAAAAAAAAP//AAAAAAAA"),
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 237,
"vertex_data": PackedByteArray("dpG2PXYJfj92kba90xsePjBpZj/TGx6+dpE2PhgjRj92kTa+0xsePgDdJT/TGx6+WEIRsQCuRDswY/O+WEIRsQCuRDswY/O+XxgBPnYJfj8AAACAdplfPjBpZj8AAACAXxiBPhgjRj8AAACAdplfPgDdJT8AAACA1hmsvgCuRDvWGay+dZG2PXYJfj91kbY90xsePjBpZj/TGx4+dZE2PhgjRj91kTY+0xsePgDdJT/TGx4+MGPzvgCuRDsU2CaxAAAAAHYJfj9fGAE+AAAAADBpZj92mV8+AAAAABgjRj9fGIE+AAAAAADdJT92mV8+1hmsvgCuRDvWGaw+AAAAAKRXgz8AAACAdZG2vXYJfj91kbY90xsevjBpZj/TGx4+dZE2vhgjRj91kTY+0xsevgDdJT/TGx4+WEIRsQCuRDswY/M+XxgBvnYJfj8AAACAdplfvjBpZj8AAACAXxiBvhgjRj8AAACAdplfvgDdJT8AAACA1hmsPgCuRDvWGaw+dZG2vXYJfj91kba90xsevjBpZj/TGx6+dZE2vhgjRj91kTa+0xsevgDdJT/TGx6+MGPzPgCuRDsU2CaxAAAAAHYJfj9fGAG+AAAAAHYJfj9fGAG+AAAAADBpZj92mV++AAAAADBpZj92mV++AAAAABgjRj9fGIG+AAAAABgjRj9fGIG+AAAAAADdJT92mV++AAAAAADdJT92mV++1hmsPgCuRDvWGay+f8GYsACn9D4Crx+/f8GYsACn9D4Crx+/f8GYsACn9D4Crx+/f8GYsACn9D4Crx+/LsP9vv4WEz+0p+K+LsP9vv4WEz+0p+K+6G8zv93fTj9X/rS76G8zv93fTj9X/rS7LsP9vl5UhT+//9w+LsP9vl5UhT+//9w+f8GYsB22kT8I2xw/f8GYsB22kT8I2xw/LsP9Pl5UhT+//9w+LsP9Pl5UhT+//9w+6G8zP93fTj9X/rS76G8zP93fTj9X/rS7LsP9Pv4WEz+0p+K+LsP9Pv4WEz+0p+K+IzmvMcDWYz8q6Ia+IzmvMcDWYz8q6Ia+QtAIvrCDaj8z1Fu+yntBvmyhej8+T8a9QtAIvpRfhT+xJ6w8IzmvMQy2iD8rAo89RNAIPpRfhT+xJ6w8yntBPmyhej8+T8a9RNAIPrCDaj8z1Fu+7aYCMrmXhz9mnH6+7aYCMrmXhz9mnH6+HNKXvW+tij9tIGu+ALXWvfofkj9jFjy+HNKXvYSSmT9YDA2+7aYCMjqonD+6IPO9ItKXPYSSmT9YDA2+A7XWPfofkj9jFjy+ItKXPW+tij9tIGu+1D6IMoTvoT98WuW+f8GYsN3fTj9X/rS7fE/xvXztNz/rS1c+mOlevXztNz/rS1c+fE/xvTZMWT/rS1c+mOlevTZMWT/rS1c+2F/SvRamMj/rS1c+b2SOvRamMj/rS1c+2F/SvZ2TXj/rS1c+b2SOvZ2TXj/rS1c+fE/xvTZMWT9QG34+fE/xvXztNz9PG34+mOlevXztNz9PG34+mOlevTZMWT9QG34+2F/SvRamMj9QG34+b2SOvRamMj9QG34+b2SOvZ2TXj9QG34+2F/SvZ2TXj9QG34+fU/xPXvtNz/qS1c+mulePXvtNz/qS1c+fU/xPTRMWT/qS1c+mulePTRMWT/qS1c+2V/SPRWmMj/qS1c+cWSOPRWmMj/qS1c+2V/SPZuTXj/qS1c+cWSOPZuTXj/qS1c+fU/xPTRMWT9PG34+fU/xPXvtNz9PG34+mulePXvtNz9PG34+mulePTRMWT9PG34+2V/SPRWmMj9PG34+cWSOPRWmMj9PG34+cWSOPZuTXj9PG34+2V/SPZuTXj9PG34+WEIRsQCuRDswY/O+1hmsvgCuRDvWGay+MGPzvgCuRDsU2Cax1hmsvgCuRDvWGaw+AAAAAKRXgz8AAACAAAAAAKRXgz8AAACAAAAAAKRXgz8AAACAAAAAAKRXgz8AAACAAAAAAKRXgz8AAACAWEIRsQCuRDswY/M+1hmsPgCuRDvWGaw+MGPzPgCuRDsU2CaxAAAAABgjRj9fGIG+AAAAABgjRj9fGIG+AAAAABgjRj9fGIG+1hmsPgCuRDvWGay+f8GYsB22kT8I2xw/f8GYsB22kT8I2xw/7aYCMrmXhz9mnH6+7aYCMrmXhz9mnH6+7aYCMrmXhz9mnH6+1D6IMoTvoT98WuW+WEIRsQCuRDswY/O+XxiBPhgjRj8AAACAXxiBPhgjRj8AAACA1hmsvgCuRDvWGay+MGPzvgCuRDsU2CaxAAAAABgjRj9fGIE+AAAAABgjRj9fGIE+1hmsvgCuRDvWGaw+AAAAAKRXgz8AAACAAAAAAKRXgz8AAACAAAAAAKRXgz8AAACAAAAAAKRXgz8AAACAXxiBvhgjRj8AAACAXxiBvhgjRj8AAACA1hmsPgCuRDvWGaw+AAAAABgjRj9fGIG+AAAAABgjRj9fGIG+1hmsPgCuRDvWGay+IzmvMQy2iD8rAo89IzmvMQy2iD8rAo897aYCMrmXhz9mnH6+7aYCMrmXhz9mnH6+A7XWPfofkj9jFjy+A7XWPfofkj9jFjy+1D6IMoTvoT98WuW+1D6IMoTvoT98WuW+1D6IMoTvoT98WuW+dpE2PhgjRj92kTa+WEIRsQCuRDswY/O+XxiBPhgjRj8AAACAXxiBPhgjRj8AAACA1hmsvgCuRDvWGay+dZE2PhgjRj91kTY+dZE2PhgjRj91kTY+MGPzvgCuRDsU2CaxAAAAABgjRj9fGIE+1hmsvgCuRDvWGaw+AAAAAKRXgz8AAACAAAAAAKRXgz8AAACAAAAAAKRXgz8AAACAAAAAAKRXgz8AAACAdZE2vhgjRj91kTY+WEIRsQCuRDswY/M+XxiBvhgjRj8AAACA1hmsPgCuRDvWGaw+dZE2vhgjRj91kTa+MGPzPgCuRDsU2CaxAAAAABgjRj9fGIG+AAAAABgjRj9fGIG+1hmsPgCuRDvWGay+IzmvMcDWYz8q6Ia+yntBvmyhej8+T8a9RNAIPpRfhT+xJ6w8RNAIPrCDaj8z1Fu+7aYCMrmXhz9mnH6+7aYCMrmXhz9mnH6+7aYCMrmXhz9mnH6+HNKXvW+tij9tIGu+HNKXvW+tij9tIGu+HNKXvYSSmT9YDA2+HNKXvYSSmT9YDA2+HNKXvYSSmT9YDA2+A7XWPfofkj9jFjy+A7XWPfofkj9jFjy+1D6IMoTvoT98WuW+1D6IMoTvoT98WuW+1D6IMoTvoT98WuW+1D6IMoTvoT98WuW+mOlevXztNz/rS1c+fE/xvTZMWT/rS1c+fE/xvXztNz9PG34+mOlevTZMWT9QG34+fU/xPXvtNz/qS1c+fU/xPXvtNz/qS1c+fU/xPXvtNz/qS1c+mulePXvtNz/qS1c+mulePXvtNz/qS1c+mulePXvtNz/qS1c+fU/xPTRMWT/qS1c+fU/xPTRMWT/qS1c+fU/xPTRMWT/qS1c+mulePTRMWT/qS1c+mulePTRMWT/qS1c+mulePTRMWT/qS1c+fU/xPTRMWT9PG34+fU/xPTRMWT9PG34+fU/xPTRMWT9PG34+fU/xPTRMWT9PG34+fU/xPXvtNz9PG34+fU/xPXvtNz9PG34+fU/xPXvtNz9PG34+fU/xPXvtNz9PG34+mulePXvtNz9PG34+mulePXvtNz9PG34+mulePXvtNz9PG34+mulePTRMWT9PG34+mulePTRMWT9PG34+mulePTRMWT9PG34+mulePTRMWT9PG34+Ur1V4WSuisWu3KfRWb9dwP///7+VupW6dfrDwhm4ULeF2///ivipwoXb//8XOmCXcLKOzaWQlbos09KsxI04s////3//f4SsTviwh+CCfakjHBDOdVH9l6ierMJRaqqyVq5Qo+tm6Kn/v/9/nVhhpzq9iIUPXVileSR5pIxeCJb/f47N71oUrv9/0qxCXbKh/3//f1tU0ZX/f7CHwlvflBFOIpwiXxCX/3///8VU/79WYazCfFXWq6hRUKMLYK2b/z//f3Zs4YTEQoiFZHL8hf9/eaS7XiGejk2OzbpJWa7SLNKsA1ycngAA/3//f7qLsAewh5N5w43tsSKcymqhpKxCVeHMMA6zUCOn0WpGBqUAAP+/X2OfnIkFw8KzYtiZhdt5pBmQy6twsv//tbFsz3Cy//9/BEq6LNP//z/OKdAs0///5iSao/////9I/trA/////1VK1JpO+P//V/l1vE74//9DS/WX2+MQzgS84bZMxP//r72w0UzE//8yQB/R/3+SLAXSAMj/f5IsBdIAyP9/kiwF0gDI5jc07MNIiMz/f5IsBdIAyDFBBOQyWmrK/3+SLAXSAMhoVVLp7Gw+yKuO//+Yf0/H/3+SLAXSAMj/f5IsBdIAyJaqUumxkYXI/3+SLAXSAMjNvgTkm6V5yv9/kiwF0gDIGMg07MC3W8wa1v//yS1lzxrW//84y7/RPSa34Kg/1siPM+XQD1RywpFVHNNFa1G5/3916rB37bVtqhzTJ4xSu2/M5dAoqDvEwdm34Pu/AMmR4QAAqhW9t5HhAADH99286AicOjNCscOeHNmuQ2jMvu9NCrtlhd+y/39h2NOE76wPsgq7C4ISsGDj2a5cmMe7FvecOqa/jsGJ1f//PoFZ6v9/kiwF0gDI7hLhOQ/s6WQQ7eE5LLYINu4SHcYP7BYbEO0dxiy290mVNSsbO+haVmnKKxtI0x40lTXT5DvopClpytPkSNPhSx1G7pL///8/HUYQbf///z/huRBt////P+G57pL///8/02RpSv///z8rm2lK////PyublbX///8/02SVtf///z8Q7eE57xMVm+4S4TnSSfbJEO0dxu8T6OTuEh3G0kkHtmnKKxvDF6SplTUrG7Ys4MtpytPkwxda1pU10+S2LB204bnukv///z/huRBt////Px1GEG3///8/HUbukv///z8rm2lK////P9NkaUr///8/02SVtf///z8rm5W1////P1sXP+cXOmCXZBJUzXVR/Zc5IsyXjF4IlrNPLZUiXxCXnTWikMVU/7/BZSyVxVT/v9+h/I/FVP+/7ehHi8VU/7/8GbTFxVT/vyyB1Ju7XiGeId7+k8pqoaTO6AizGZDLqyXsAt5I/trAF/RlpUj+2sA8EnLdVUrUmmvn+tYEvOG2gZG2/5h/T8f3O0m8mH9Px/g60t6qFb23Jio7uaoVvbeo1NXpx/fdvFw7D70+gVnq2+QB7Ir4qcKn56vA/3+ErKzAYJr/f4Ss3RX+x3VR/ZfIH8qdjF4Ililu8ZlbVNGVIqzXlVtU0ZWLUYKVIl8Ql1/QTtjFVP+/xqWSvMVU/7/PY/68xVT/vwUzjNvFVP+//z/tlP9/uotXGqm9/3+6i2u44pTKaqGkBelk20j+2sClGU7YVUrUmkHqZ80EvOG2LXZV+7B37bVwNUXHsHfttdsxK9qqFb23Luo548f33bxE4nfZXJjHu/yxGtpcmMe7FfDN2T6BWer/sDrePoFZ6usfx8U+gVnqTuwhxpW6lbrXFX7kFzpgl8/oDLX/f4SsEtB+k/9/hKxTFRfBdVH9l+O1rpOdWGGnlJ/aip1YYaeJJSeZjF4Ilnt7q5lbVNGVpFPElCJfEJcKzWrcxVT/v/qq363FVP+//ljvrMVU/7/pMwfZxVT/vxxHJJR2bOGEQYxEmbteIZ6zINqp/3+6i9G6XZbKaqGkFRY2z19jn5wd56ynGZDLq5HmYeRI/trAwxRH6lVK1Jql6RnSBLzhtpkfl+zJLWXPfi2M2w9UcsLwuHraJ4xSu8/VnuL7vwDJZwkYEaoVvbda78zQx/fdvEj92fLH9928OBiSxzNCscMIBQgjM0Kxw2pv+N5lhd+yKS3JxGWF37K3lQ7rZYXfsjnpksZcmMe70aMv0FyYx7tn8DzWPoFZ6nC2+uI+gVnqAiQ30D6BWeoRBArtPoFZ6gVWCYQstgg2pVxtig/sFhscWLOE////Py1enYv///8/L7QeNO8TFZsGl2QC7xMVm6bPAXzvExWbs4eXRNJJ9sl+G81x0kn2yWQQcY/SSfbJWueLje8T6ORe++6H7xPo5MC6SePvE+jk6BExptJJB7bVYD/N0kkHtp+mc/jSSQe2KaYuiv///z/lz/ON////P8l3QdX///8/GakX4////z/SpjiE////P+CqsEf///8/5dwMgv///z+1+1lx////P7qTzC7///8//GOsLf///z8XMSZy////P2WgXI7///8/JCYPfv///z/zFFCQ////P61iFcf///8/")
}]
blend_shape_mode = 0

[sub_resource type="Skin" id="Skin_fx3im"]
resource_name = "Skin"
bind_count = 1
bind/0/name = &"Root"
bind/0/bone = -1
bind/0/pose = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)

[sub_resource type="Animation" id="Animation_xoylc"]
resource_name = "Player_Anim"
length = 0.833333
loop_mode = 1
tracks/0/type = "scale_3d"
tracks/0/imported = true
tracks/0/enabled = true
tracks/0/path = NodePath("Player_Armature/Skeleton3D:Root")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 1, 1, 1, 0.0333333, 1, 1, 1, 1, 0.0666667, 1, 1, 0.997992, 1, 0.1, 1, 1, 0.993066, 1, 0.133333, 1, 1, 0.985089, 1, 0.166667, 1, 1, 0.974702, 1, 0.2, 1, 1, 0.962387, 1, 0.233333, 1, 1, 0.949591, 1, 0.266667, 1, 1, 0.936955, 1, 0.3, 1, 1, 0.925122, 1, 0.333333, 1, 1, 0.914735, 1, 0.366667, 1, 1, 0.907561, 1, 0.4, 1, 1, 0.903759, 1, 0.433333, 1, 1, 0.903514, 1, 0.466667, 1, 1, 0.906636, 1, 0.5, 1, 1, 0.912569, 1, 0.533333, 1, 1, 0.921312, 1, 0.566667, 1, 1, 0.93146, 1, 0.6, 1, 1, 0.942545, 1, 0.666667, 1, 1, 0.965652, 1, 0.7, 1, 1, 0.976269, 1, 0.733333, 1, 1, 0.98548, 1, 0.766667, 1, 1, 0.992818, 1, 0.8, 1, 1, 0.997814, 1, 0.833333, 1, 1, 1, 1)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c5yxe"]
_data = {
"Player_Anim": SubResource("Animation_xoylc")
}

[node name="Player" type="CharacterBody3D" groups=["player"]]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)
script = ExtResource("1_xw2u1")
SPEED = 10.0
bullet = ExtResource("2_uspnu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_jouk3")

[node name="Visuals" type="Node3D" parent="."]

[node name="Player" type="Node3D" parent="Visuals"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)

[node name="Player_Armature" type="Node3D" parent="Visuals/Player"]

[node name="Skeleton3D" type="Skeleton3D" parent="Visuals/Player/Player_Armature"]
bones/0/name = "Root"
bones/0/parent = -1
bones/0/rest = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)
bones/0/enabled = true
bones/0/position = Vector3(0, 0, 0)
bones/0/rotation = Quaternion(0, 0, 0, 1)
bones/0/scale = Vector3(1, 1, 1)

[node name="Player_Mesh" type="MeshInstance3D" parent="Visuals/Player/Player_Armature/Skeleton3D"]
mesh = SubResource("ArrayMesh_neyn1")
skin = SubResource("Skin_fx3im")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Visuals/Player"]
libraries = {
"": SubResource("AnimationLibrary_c5yxe")
}

[node name="Camera Origin" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0)

[node name="SpringArm3D" type="SpringArm3D" parent="Camera Origin"]
spring_length = 5.0
margin = 0.5

[node name="Camera3D" type="Camera3D" parent="Camera Origin/SpringArm3D"]
fov = 90.0

[node name="ProjectileSpawn" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.752559, -0.975894)

[node name="ShootTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
